test/conformance/chainsaw/verifyImages/clusterpolicy/standard/notary-attestation-verification/policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notary-verify-attestation
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: keys
  namespace: notary-verify-attestation
data:
  certificate: |-
    -----BEGIN CERTIFICATE-----
    MIIDTTCCAjWgAwIBAgIJAPI+zAzn4s0xMA0GCSqGSIb3DQEBCwUAMEwxCzAJBgNV
[...]
    uOKpF5rWAruB5PCIrquamOejpXV9aQA/K2JQDuc0mcKz
    -----END CERTIFICATE-----
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image-attestation
spec:
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: verify-attestation-notary
      match:
        any:
        - resources:
            kinds:
              - Pod
      context:
      - name: keys
        configMap:
          name: keys
          namespace: notary-verify-attestation
      verifyImages:
      - failureAction: Enforce
        type: Notary
        imageReferences:
          - "ghcr.io/kyverno/test-verify-image*"
        attestations:
          - type: sbom/cyclone-dx
            attestors:
            - entries:
              - certificates: 
                  cert: "{{ keys.data.certificate }}"
            conditions:
            - all:
              - key: "{{ components[].licenses[].expression }}"
                operator: AllIn
                value: ["GPL-3.0"]
          - type: vulnerability-scan
            attestors:
            - entries:
              - certificates: 
                  cert: "{{ keys.data.certificate }}"
            conditions:
            - all:
              - key: "{{ source.type }}"
                operator: Equals
                value: "image"
