test/conformance/chainsaw/verifyImages/clusterpolicy/standard/notary-attestation-verification/02-resource.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resource
spec:
  timeouts: {}
  try:
  - apply:
      file: pod.yaml
  - assert:
      file: pod-assert.yaml
